Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
Description
ReactOS Version: 0.4.13-dev-1063-g7ff3658
When I try to format a BTRFS drive (that has been added as a second HDD in the VM settings of it, which is being ran via VMWare Workstation Player 15), I get an INVALID_KERNEL_HANDLE BSOD either before it starts to format it or after it is formatted (the former happens when formatting it as BTRFS and the latter happens when formatting it as FAT32). The debug log made when it happened is attached.
Attachments
Issue Links
- relates to
-
CORE-16494 Upgrade WinBtrfs driver to v1.5
-
- Resolved
-