[BTRFS] Create system threads with OBJ_KERNEL_HANDLE. CORE-16375

Windows Vista and later automatically return a kernel handle from
PsCreateSystemThread, but earlier versions require that OBJ_KERNEL_HANDLE
be specified explicitly.
This may or may not make sense for upstream -- it doesn't break things on
newer Windows versions but is not necessary unless supporting Windows 2003
or below is desired.